--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "pg": "^8.16.0",
     "prisma": "^6.9.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -47,6 +48,7 @@
     "@types/node-telegram-bot-api": "^0.64.9",
     "@types/pg": "^8.15.4",
     "@types/supertest": "^2.0.12",
+    "@types/stripe": "^8.0.417",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
